--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,139 @@
 name: cnn
 channels:
   - conda-forge
-
+  - defaults
 dependencies:
-  - python==3.7.4
-  - pip
-  - matplotlib
-  - cudatoolkit=10.0.130
-  - cudnn
-  - pandas
+  - _libgcc_mutex=0.1=main
+  - blas=1.0=openblas
+  - ca-certificates=2019.11.27=0
+  - certifi=2019.11.28=py37_0
+  - cudatoolkit=10.0.130=0
+  - cudnn=7.6.5=cuda10.0_0
+  - cycler=0.10.0=py_2
+  - dbus=1.13.6=he372182_0
+  - expat=2.2.5=he1b5a44_1004
+  - fontconfig=2.13.1=h86ecdb6_1001
+  - freetype=2.10.0=he983fc9_1
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - glib=2.58.3=py37h6f030ca_1002
+  - gst-plugins-base=1.14.5=h0935bb2_0
+  - gstreamer=1.14.5=h36ae1b5_0
+  - icu=64.2=he1b5a44_1
+  - jpeg=9c=h14c3975_1001
+  - kiwisolver=1.1.0=py37hc9558a2_0
+  - libblas=3.8.0=14_openblas
+  - libcblas=3.8.0=14_openblas
+  - libclang=9.0.1=default_hde54327_0
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=he1b5a44_1006
+  - libgcc-ng=9.2.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_2
+  - libiconv=1.15=h516909a_1005
+  - liblapack=3.8.0=14_openblas
+  - libllvm9=9.0.1=hc9558a2_0
+  - libopenblas=0.3.7=h5ec1e0e_6
+  - libpng=1.6.37=hed695b0_0
+  - libstdcxx-ng=9.2.0=hdf63c60_0
+  - libuuid=2.32.1=h14c3975_1000
+  - libxcb=1.13=h14c3975_1002
+  - libxkbcommon=0.9.1=hebb1f50_0
+  - libxml2=2.9.10=hee79883_0
+  - matplotlib=3.1.2=py37_1
+  - matplotlib-base=3.1.2=py37h250f245_1
+  - ncurses=6.1=hf484d3e_1002
+  - nspr=4.24=he1b5a44_0
+  - nss=3.47=he751ad9_0
+  - numpy-base=1.17.4=py37h2f8d375_0
+  - openssl=1.1.1d=h7b6447c_3
+  - pandas=0.25.3=py37hb3f55d8_0
+  - patsy=0.5.1=py37_0
+  - pcre=8.43=he1b5a44_0
+  - pip=19.3.1=py37_0
+  - pthread-stubs=0.4=h14c3975_1001
+  - pyparsing=2.4.6=py_0
+  - pyqt=5.12.3=py37hcca6a23_1
+  - python=3.7.4=h265db76_1
+  - python-dateutil=2.8.1=py_0
+  - pytz=2019.3=py_0
+  - qt=5.12.5=hd8c4c69_1
+  - readline=7.0=hf8c457e_1001
+  - seaborn=0.9.0=pyh91ea838_1
+  - setuptools=44.0.0=py37_0
+  - six=1.13.0=py37_0
+  - sqlite=3.30.1=h7b6447c_0
+  - statsmodels=0.10.1=py37hdd07704_0
+  - tk=8.6.10=hed695b0_0
+  - tornado=6.0.3=py37h516909a_0
+  - wheel=0.33.6=py37_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xz=5.2.4=h14c3975_1001
+  - zlib=1.2.11=h516909a_1006
   - pip:
-    - jupyterlab
-    - tensorflow-gpu==2.0.0b1
-    - opencv-python==4.1.1.26
-    - opencv-contrib-python==4.1.1.26
+    - absl-py==0.9.0
+    - astor==0.8.1
+    - attrs==19.3.0
+    - backcall==0.1.0
+    - bleach==3.1.0
+    - decorator==4.4.1
+    - defusedxml==0.6.0
+    - entrypoints==0.3
+    - gast==0.3.2
+    - google-pasta==0.1.8
+    - grpcio==1.26.0
+    - h5py==2.10.0
+    - importlib-metadata==1.3.0
+    - ipykernel==5.1.3
+    - ipython==7.11.1
+    - ipython-genutils==0.2.0
+    - jedi==0.15.2
+    - jinja2==2.10.3
+    - joblib==0.14.1
+    - json5==0.8.5
+    - jsonschema==3.2.0
+    - jupyter-client==5.3.4
+    - jupyter-core==4.6.1
+    - jupyterlab==1.2.4
+    - jupyterlab-server==1.0.6
+    - keras-applications==1.0.8
+    - keras-preprocessing==1.1.0
+    - markdown==3.1.1
+    - markupsafe==1.1.1
+    - mistune==0.8.4
+    - more-itertools==8.0.2
+    - nbconvert==5.6.1
+    - nbformat==4.4.0
+    - notebook==6.0.2
     - numpy==1.16.0
-    - scikit-learn
+    - opencv-contrib-python==4.1.1.26
+    - opencv-python==4.1.1.26
+    - pandocfilters==1.4.2
+    - parso==0.5.2
+    - pexpect==4.7.0
+    - pickleshare==0.7.5
+    - prometheus-client==0.7.1
+    - prompt-toolkit==3.0.2
+    - protobuf==3.11.2
+    - ptyprocess==0.6.0
+    - pygments==2.5.2
+    - pyqt5-sip==4.19.18
+    - pyqtwebengine==5.12.1
+    - pyrsistent==0.15.6
+    - pyzmq==18.1.1
+    - scikit-learn==0.22.1
+    - scipy==1.4.1
+    - send2trash==1.5.0
+    - tb-nightly==1.14.0a20190603
+    - tensorflow-gpu==2.0.0b1
+    - termcolor==1.1.0
+    - terminado==0.8.3
+    - testpath==0.4.4
+    - tf-estimator-nightly==1.14.0.dev2019060501
+    - traitlets==4.3.3
+    - wcwidth==0.1.8
+    - webencodings==0.5.1
+    - werkzeug==0.16.0
+    - wrapt==1.11.2
+    - zipp==0.6.0
+prefix: /home/jason/anaconda3/envs/cnn
 
